# butterfly_1.0

./: .env.example  .gitignore  AUDIT_NOTES.md  README.md  butterfly_1.0_audit_report.md  config.yaml  external_references.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
db/: schema.sql
docs/: architecture.md  crawler_purpose.md  data_dictionary.md  original_README_attached.md  original_ci_attached.yml
lnp_crawler/: __init__.py  config.py  db.py  dedupe.py  extraction_patterns.py  http_utils.py  logger.py  models.py  normalization.py  qa.py  query_builder.py  source_registry.py  state_machine.py  text_cleaning.py
lnp_crawler/clients/: __init__.py  biorxiv_client.py  crossref_client.py  doaj_client.py  europepmc_client.py  medrxiv_client.py  openalex_client.py  pmc_client.py  pubmed_client.py  semanticscholar_client.py  unpaywall_client.py
scripts/: deduplicate_records.py  discover_documents.py  export_results.py  extract_lnp_data.py  fetch_documents.py  init_project.py  load_database.py  normalize_records.py  parse_documents.py  run_pipeline.py  run_qa.py  update_source_registry.py
tests/: conftest.py  test_db.py  test_dedupe.py  test_discovery.py  test_extract.py  test_fetch.py  test_normalize.py  test_parse.py  test_pipeline.py
tests/fixtures/: gold_set.json
